Fix Hetzner customer provisioning form
